--- a/html/index.html
+++ b/html/index.html
@@ -10,99 +10,29 @@
 
 <body>
     <nav class="menu">
-        <a href="/html/index.html">Strona główna</a>
-        <a href="/html/hobby.html">Co mnie kręci</a>
-        <a href="/html/my-homeland.html">Sercem w Beskidach</a></nav>
+        <a class="menu__page menu__page--homepage" href="/html/index.html">Strona główna</a>
+        <a class="menu__page" href="/html/css.html">CSS</a>
+        <a class="menu__page" href="/html/java-script.html">Java Script</a>
+        <a class="menu__page" href="/html/my-projects.html">Moje projekty</a>
+    </nav>
+
     <main>
-        <header>
-            <h1 class="title">Marta Lang - strona główna</h1>
-        </header>
-        <section>
-            <p class="about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolorum quasi animi eaque
-                dolorem tempore
-                laudantium voluptates incidunt? Adipisci placeat ducimus quasi suscipit voluptates libero aliquid ab
-                numquam
-                officiis maiores.</p>
+        <section class="introduction clearfix">
+            <header>
+                <h1 class="introduction__title">Od zera do frontend developera</h1>
+            </header>
+            <img class="introduction__photo" src="/img/Marta.jpg" alt="Zdjęcie profilowe">
+            <p class="introduction__description">Cześć! Mam na imię Marta. Pochodzę z malowniczego Śląska Cieszyńskiego
+                u podnóża Beskidów, a aktualnie mieszkam w Gliwicach. Niedawno zaczęłam moją przygodę z frontendem.
+                Zapraszam do zapoznania się z moją stroną, na której publikuję moje postępy w nauce.</p>
         </section>
-        <section>
-            <article>
-                <h2 class="intro-title"></h2>
-                <p class="intro-desc">Do kursu WTF startuję z podstawami HTML'a, CSS'a i JavaScript. Przerobiłam już
-                    kurs "Web developer w
-                    15
-                    dni" i równolegle kończę "Programowanie w JavaScript" od Samuraja Programowania <a
-                        href="https://websamuraj.pl/">WebSamuraj</a>. </p>
-            </article>
-            <article>
-                <h2 class="project-name">Kamień, papier, nożyce</h2>
-                <p class="project-desc">Dzisiaj napisałam grę w kamień, papier i nożyce, do zabawy z komputerem. Na
-                    stronie głównej mojej gry
-                    zamieściłam udostępnione przez Samuraja grafiki ilustrujące wybór gracza. Po zaznaczeniu jednej z
-                    nich i
-                    kliknięciu przycisku "Start" następuje wywołanie metody <span
-                        class="italics">computerChoice()</span>, losującej element z 3-el.
-                    tablicy. Wybory gracza i komputera są w każdej grze przekazywane do obiektu game. Metoda <span
-                        class="italics">getResult()</span>
-                    wyłania zwycięzcę gry na podstawie odpowiednich warunków oraz aktualizuje licznik zwycięstw/porażek
-                    i
-                    remisów. Metoda <span class="italics">viewResults() </span> odpowiada
-                    za wyświetlenie aktualnej statystyki w odpowiednich polach w widoku. </p>
-            </article>
-            <article>
-                <h2 class="project-name">Metody <span class="italics">setInterval()</span> i <span
-                        class="italics">setTimeout()</span></h2>
-                <p class="project-desc">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente doloremque quibusdam iusto dicta
-                    eaque officiis vero dolore commodi sunt porro? Reiciendis vero expedita laudantium saepe. Sapiente
-                    eaque
-                    ad nobis quibusdam?
-                </p>
-            </article>
-            <article>
-                <h2 class="project-name">Projekt bannera ze zmieniającymi się grafikami</h2>
-                <p class="project-desc">
-                    W projekcie należało zapewnić dwie podstawowe funkcjonalności mojego bannera:
-                    <ul class="list">
-                        <li>automatyczne przełączanie tła wraz z podświetlaniem odpowiadającej mu kropki</li>
-                        <li>możliwość manualnej nawigacji między kropkami i tłami za pomocą strzałek (lewo-prawo).</li>
-                    </ul>
-                    Projek wymusił na mnie kilka podejść i sporo główkowania. Największym problemem było zapewnienie
-                    bezkolizyjnego współdziałania tych dwóch funkcjonalności i płynnego przejścia między nimi. Kluczowe
-                    okazało się manewrowanie interwałem czasowym wywoływania funkcji automatycznej zmiany tła.
-                    Napotkałam też problemy przy ograniczaniu obszaru zmiany grafik do konkretnej liczby elementów
-                    (tutaj
-                    3).
-                </p>
-            </article>
-            <article>
-                <h2 class="project-name">Czas</h2>
-                <h3 class="subproject-name">Odliczanie czasu do rocznicy ślubu</h3>
-                <p class="project-desc">Najpierw utworzyłam nowy obiekt przechowujący datę rocznicy ślubu: <span
-                        class="italics">let
-                        futureDate = new Date(2020, 5,
-                        29,
-                        15, 0, 0);</span> (drugi parametr odpowiada za indeks miesiąca, a indeksowanie jest od zera,
-                    czyli czerwiec
-                    ma
-                    wartość 5). Następnie utworzyłam funkcję <span class="italics">countDown()</span>, która co sekundę
-                    nadpisuje zmienną actualDate
-                    aktualną datą (i czasem), a następnie wyznacza różnicę między tymi datami: <span class="italics">let
-                        timeDiff = new
-                        Date(futureDate - actualDate);</span> Następnie z obiektu timeDiff pobieram i w odpowidnich
-                    polach na
-                    stronie
-                    wyświetlam liczbę miesięcy, dni, godzin, minut i sekund. Za pobieranie tych wartości odpowiadają
-                    metody
-                    <span class="italics">Date().getMonth(), Date().getDay()...</span> </p>
-                <h3 class="subproject-name">Stoper</h3>
-                <p class="project-desc">W projekcie stopera tworzenie obiektu Date do odliczania czasu nie jest
-                    konieczne. Moja metoda
-                    <span class="italics">runStopwatch()</span> co 10ms inkrementuje i wyświetla licznik "tików zegara".
-                    Po wystartowaniu stopera
-                    możliwe
-                    jest zapauzowanie go tym samym przyciskiem oraz ponowne uruchomienie. Każdy kolejny rozpoczęty etap
-                    odliczania jest sumowany z poprzednimi. Kliknięcie przycisku "Reset" powoduje wyzerowanie licznika.
-                </p>
+        <section class="articles">
+            <article class="first-steps">
+                <h2 class="first-steps__heading"></h2>
+                <p class="first-steps__description"> Do kursu
+                    WTF startuję z podstawami HTML'a, CSS'a i JavaScript. Przerobiłam już kurs "Web developer w 15 dni"
+                    i równolegle kończę "Programowanie w JavaScript" od Samuraja Programowania <a
+                        class="first-steps__link" href="https://websamuraj.pl/">WebSamuraj</a>.</p>
             </article>
         </section>
         <footer class="main-footer">Marta Lang &copy; 2020</footer>
