styles normalization, background gradient

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style-index.css">
 </head>
 
 <body>
@@ -17,10 +18,11 @@
     </nav>
 
     <main>
+        <header class="title">
+            <h1>Od zera do frontend developera</h1>
+        </header>
         <section class="introduction clearfix">
-            <header>
-                <h1 class="introduction__title">Od zera do frontend developera</h1>
-            </header>
+
             <img class="introduction__photo" src="/img/Marta.jpg" alt="Zdjęcie profilowe">
             <p class="introduction__description">Cześć! Mam na imię Marta. Pochodzę z malowniczego Śląska Cieszyńskiego
                 u podnóża Beskidów, a aktualnie mieszkam w Gliwicach. Niedawno zaczęłam moją przygodę z frontendem.
