--- a/html/my-projects.html
+++ b/html/my-projects.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekty</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style-index.css">
+
 </head>
 
 <body>
@@ -15,9 +18,9 @@
         <a class="menu__page" href="/html/my-projects.html">Moje projekty</a>
     </nav>
     <img src="/img/gorkiwielkie.jpg" alt="Panorama z ul.Widokowej">
-    <article>
-        <h2 class="project-name">Kamień, papier, nożyce</h2>
-        <p class="project-desc">Dzisiaj napisałam grę w kamień, papier i nożyce, do zabawy z komputerem. Na
+    <article class="project">
+        <h2 class="project__name">Kamień, papier, nożyce</h2>
+        <p class="project__description">Dzisiaj napisałam grę w kamień, papier i nożyce, do zabawy z komputerem. Na
             stronie głównej mojej gry
             zamieściłam udostępnione przez Samuraja grafiki ilustrujące wybór gracza. Po zaznaczeniu jednej z
             nich i
@@ -30,19 +33,19 @@
             remisów. Metoda <span class="italics">viewResults() </span> odpowiada
             za wyświetlenie aktualnej statystyki w odpowiednich polach w widoku. </p>
     </article>
-    <article>
-        <h2 class="project-name">Metody <span class="italics">setInterval()</span> i <span
+    <article class="project">
+        <h2 class="project__name">Metody <span class="italics">setInterval()</span> i <span
                 class="italics">setTimeout()</span></h2>
-        <p class="project-desc">
+        <p class="project__description">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente doloremque quibusdam iusto dicta
             eaque officiis vero dolore commodi sunt porro? Reiciendis vero expedita laudantium saepe. Sapiente
             eaque
             ad nobis quibusdam?
         </p>
     </article>
-    <article>
-        <h2 class="project-name">Projekt bannera ze zmieniającymi się grafikami</h2>
-        <p class="project-desc">
+    <article class="project">
+        <h2 class="project__name">Projekt bannera ze zmieniającymi się grafikami</h2>
+        <p class="project__desc">
             W projekcie należało zapewnić dwie podstawowe funkcjonalności mojego bannera:
             <ul class="list">
                 <li>automatyczne przełączanie tła wraz z podświetlaniem odpowiadającej mu kropki</li>
@@ -57,9 +60,9 @@
         </p>
     </article>
     <article>
-        <h2 class="project-name">Czas</h2>
-        <h3 class="subproject-name">Odliczanie czasu do rocznicy ślubu</h3>
-        <p class="project-desc">Najpierw utworzyłam nowy obiekt przechowujący datę rocznicy ślubu: <span
+        <h2 class="project__group">Czas</h2>
+        <h3 class="project__name">Odliczanie czasu do rocznicy ślubu</h3>
+        <p class="project__description">Najpierw utworzyłam nowy obiekt przechowujący datę rocznicy ślubu: <span
                 class="italics">let
                 futureDate = new Date(2020, 5,
                 29,
@@ -76,8 +79,8 @@
             wyświetlam liczbę miesięcy, dni, godzin, minut i sekund. Za pobieranie tych wartości odpowiadają
             metody
             <span class="italics">Date().getMonth(), Date().getDay()...</span> </p>
-        <h3 class="subproject-name">Stoper</h3>
-        <p class="project-desc">W projekcie stopera tworzenie obiektu Date do odliczania czasu nie jest
+        <h3 class="project__name">Stoper</h3>
+        <p class="project__description">W projekcie stopera tworzenie obiektu Date do odliczania czasu nie jest
             konieczne. Moja metoda
             <span class="italics">runStopwatch()</span> co 10ms inkrementuje i wyświetla licznik "tików zegara".
             Po wystartowaniu stopera
